--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\abrirAyuda.cs" />
     <Compile Include="Assets\Scripts\ahorrobateria.cs" />
     <Compile Include="Assets\Scripts\audioControl.cs" />
     <Compile Include="Assets\Scripts\bienvenidoload.cs" />
