--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,7 +64,6 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\abrirAyuda.cs" />
     <Compile Include="Assets\Scripts\ahorrobateria.cs" />
-    <Compile Include="Assets\Scripts\audioControl.cs" />
     <Compile Include="Assets\Scripts\bienvenidoload.cs" />
     <Compile Include="Assets\Scripts\changeMaterial.cs" />
     <Compile Include="Assets\Scripts\changeRopa.cs" />
@@ -72,6 +71,7 @@
     <Compile Include="Assets\Scripts\Errorpopup.cs" />
     <Compile Include="Assets\Scripts\Linerender.cs" />
     <Compile Include="Assets\Scripts\muteAudio.cs" />
+    <Compile Include="Assets\Scripts\pantallaCorrecta.cs" />
     <Compile Include="Assets\Scripts\particulasmouse.cs" />
     <Compile Include="Assets\Scripts\persistencia.cs" />
     <Compile Include="Assets\Scripts\PuntosControl.cs" />
